# boids

./: CMakeLists.txt  README.md
shaders/: shader.frag  shader.vert
src/: Boid.cpp  Boid.h  Camera.cpp  Camera.h  Input.h  ShaderHandler.cpp  ShaderHandler.h  main.cpp
src/simulation/: Boid.cpp  Boid.h  UI.h
src/simulation/boid/: Boid.cpp  Boid.h  BoidObject.cpp  BoidObject.h  BoidParams.cpp  BoidParams.h
src/simulation/obstacle/: Obstacle.cpp  Obstacle.h
